--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
 
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="https://prakash4844.github.io/Dressingnity-Ecommerce-Website/"><img
+            <a class="navbar-brand" href="https://sagargoswami2001.github.io/Static-Site-YHills-Project/"><img
                     style="height:60px;" src="Images/SVG Samples/Dressingnity (LOGO-final).svg" alt="BrandLogo"></a>
 
             <!-- Toggle button -->
@@ -129,7 +129,7 @@
         <p>1. <b>Introduction</b></p>
         <p>Welcome to <b>Dressingnity</b> (“Company”, “we”, “our”, “us”)!</p>
         <p>These Terms of Service (“Terms”, “Terms of Service”) govern your use of our website located at
-            <b>https://prakash4844.github.io/Dressingnity-Ecommerce-Website/Terms&Conditions.html</b> (together or
+            <b>https://sagargoswami2001.github.io/Static-Site-YHills-Project/Terms&Conditions.html</b> (together or
             individually “Service”) operated by <b>Dressingnity</b>.
         </p>
         <p>Our Privacy Policy also governs your use of our Service and explains how we collect, safeguard and disclose
@@ -347,7 +347,7 @@
         <p>24. <b>Contact Us</b></p>
         <p>Please send your feedback, comments, requests for technical support by email: <b>info@Dressingnity.com</b>.
         </p>
-        <!-- <p style="margin-top: 5em; font-size: 0.7em;">These <a href="https://policymaker.io/terms-and-conditions/">Terms of Service</a> were created for <b>https://prakash4844.github.io/Dressingnity-Ecommerce-Website/</b> by <a href="https://policymaker.io">PolicyMaker.io</a> on 2022-11-01.</p> -->
+        <!-- <p style="margin-top: 5em; font-size: 0.7em;">These <a href="https://policymaker.io/terms-and-conditions/">Terms of Service</a> were created for <b>https://sagargoswami2001.github.io/Static-Site-YHills-Project/</b> by <a href="https://policymaker.io">PolicyMaker.io</a> on 2022-11-01.</p> -->
         </p>
     </div>
     <!-- Terms and Conditions Ends -->
